--- a/Class-Content/01-HTML-Git-CSS/01-Activities/03-MyFirstHTML/Solved/my-first-html-with-bonus.html
+++ b/Class-Content/01-HTML-Git-CSS/01-Activities/03-MyFirstHTML/Solved/my-first-html-with-bonus.html
@@ -12,7 +12,7 @@
   <h1>Hello World!</h1>
 
   <!-- Image -->
-  <img src="http://en.spongepedia.org/images/thumb/3/33/Spongebob!!!.jpg/180px-Spongebob!!!.jpg" alt="Spongebob!" />
+  <img src="https://vignette.wikia.nocookie.net/spongebob/images/d/d7/SpongeBob_stock_art.png/revision/latest?cb=20190921125147" alt="Spongebob!" />
   <br>
 
   <!-- Link with New Tab -->
